--- a/gdk-config.json
+++ b/gdk-config.json
@@ -2,7 +2,7 @@
   "component": {
     "Blackbird.kvs.connector": {
       "author": "Soren Jakobsen",
-      "version": "1.0.3",
+      "version": "NEXT_PATCH",
       "build": {
         "build_system": "gradlew"
       },
@@ -12,5 +12,5 @@
       }
     }
   },
-  "gdk_version": "1.0.0"
+  "gdk_version": "1.2.0"
 }
